# cloudmusic-vscode

./: .browserslistrc  .editorconfig  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .vscodeignore  .yarnrc.yml  API.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.EN.md  README.md  build.js  deno.json  gulpfile.js  package.json  package.nls.json  package.nls.zh-cn.json  package.nls.zh-tw.json  postcss.config.js  pre-webpack.js  renovate.json  tailwind.config.js  tsconfig.json  webpack.config.js
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml  codeql-analysis.yml  release.yml  test.yml  vscodeextension.yml
.vim/: coc-settings.json
.yarn/plugins/@yarnpkg/: plugin-workspace-tools.cjs
.yarn/releases/: yarn-sources.cjs
.yarn/sdks/: integrations.yml
.yarn/sdks/eslint/: package.json
.yarn/sdks/prettier/: package.json
crates/macmedia/: Cargo.toml  build.rs
crates/macmedia/src/: main.rs
crates/native/: Cargo.toml  build.rs
crates/native/src/: lib.rs  media.rs  player.rs
crates/wasi/: Cargo.toml
crates/wasi/src/: kuwo_des.rs  lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  silent.flac
doc/: API.md
docker/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.armv7-unknown-linux-gnueabihf
ext-src/activate/: player.ts  playlist.ts
ext-src/activate/command/: index.ts
ext-src/constant/: setting.ts  type.ts
ext-src/manager/: account.ts
ext-src/provider/: queue.ts
ext-src/state/: lock.ts  login.ts
ext-src/test/suite/: index.ts
ext-src/util/: api.ts  player.ts
i18n/: en.json  zh-cn.json  zh-tw.json
i18n/chs/: i18n.i18n.json  package.i18n.json
i18n/chs/manager/: accountManager.i18n.json
i18n/chs/src/: extension.i18n.json  i18n.i18n.json
i18n/chs/src/manager/: accountManager.i18n.json  buttonManager.i18n.json
i18n/chs/src/page/: page.i18n.json
i18n/chs/src/provider/: playlistProvider.i18n.json
i18n/chs/src/state/: lock.i18n.json  play.i18n.json
i18n/chs/src/util/: multiStepInput.i18n.json  util.i18n.json
i18n/cht/: i18n.i18n.json  package.i18n.json
i18n/cht/src/: i18n.i18n.json
media/audio/: silent.m4a  silent.opus
media/walkthroughs/: queue.md  statusBar.md
native/: Cargo.toml
native/src/: lib.rs
page/sass/: userMusicRanking.scss
page/ts/: userMusicRanking.ts
script/: libmpv.js
scripts/: build.js  build.mjs  build.mts  list.js  publish.js  publish.mjs  publish.mts  tooltip.js
src/: .eslintrc.json  extension.ts  i18n.ts  lib.rs  module.d.ts  tsconfig.json
src/activate/: account.ts  cache.ts  command.ts  djradio.ts  index.ts  local.ts  player.ts  playlist.ts  queue.ts  radio.ts  search.ts  statusBar.ts
src/activate/command/: account.ts  index.ts  media.ts  search.ts
src/api/: account.ts  accountManager.ts  album.ts  artist.ts  comment.ts  crypto.ts  djradio.ts  helper.ts  index.ts  playlist.ts  playlistManager.ts  request.ts  search.ts  song.ts
src/command/: account.ts  index.ts  media.ts  search.ts
src/constant/: index.ts  setting.ts  type.ts
src/manager/: account.ts  accountManager.ts  button.ts  buttonManager.ts  index.ts  playlistManager.ts
src/native/: keyboard.rs  kuwo_des.rs  player.rs
src/page/: index.ts  page.ts
src/provider/: index.ts  local.ts  playlist.ts  playlistProvider.ts  queue.ts  queueProvider.ts
src/state/: index.ts  like.ts  loading.ts  lock.ts  login.ts  play.ts  volume.ts
src/test/: runTest.ts
src/test/suite/: extension.test.ts  index.ts
src/treeview/: djradio.ts  index.ts  local.ts  playlist.ts  queue.ts  radio.ts
src/unblock/: index.ts  kuwo.ts  qq.ts
src/unlock/: filter.ts  index.ts  joox.ts  kugou.ts  kuwo.ts  kuwoDES.ts  migu.ts  qq.ts
src/util/: api.ts  cache.ts  index.ts  multiStepInput.ts  player.ts  state.ts  util.ts  webview.ts
src/webview/: comment.tsx  components.tsx  description.tsx  index.tsx  login.tsx  lyric.tsx  musicRanking.tsx  react-app-env.d.ts  tsconfig.json  types.d.ts
src/webview/pages/: index.ts
src/webview/pages/commentList/: index.tsx
src/webview/pages/userMusicRankingList/: index.tsx
src/webview/scripts/: GLOBAL_COMMENT.js  GLOBAL_MUSIC_RANKING.js  GLOBAL_MUSIC_RANKING.ts  tsconfig.json
webview/: .eslintrc.json  App.tsx  global.scss  index.tsx  react-app-env.d.ts  tsconfig.json
webview/constant/: index.ts  type.ts
webview/pages/: index.ts
webview/pages/commentList/: index.scss  index.tsx
webview/pages/userMusicRankingList/: index.scss  index.tsx
