[workspace]
members = ["crates/macmedia", "crates/native", "crates/wasi", "crates/wasm"]
default-members = ["crates/native"]
resolver =  "2"

[patch.crates-io]
symphonia = { git = "https://github.com/pdeljanov/Symphonia", branch = "master" }
# minimp3 = { git = "https://github.com/YXL76/minimp3-rs", branch = "dev" }
cpal = { git = "https://github.com/sidit77/cpal", branch = "master" }

[profile.release]
codegen-units = 1
lto = true
