[package]
name = "native"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "native"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
rodio = { git = "https://github.com/RustAudio/rodio", features = ["flac", "mp3"] }
miniaudio = { version = "0.10.0", features = ["ma-no-wav"] }
# libmpv = {version = "2.0.0", features = ["protocols"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = {version = "2.18.2", features = ["xlib"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"

[profile.release]
lto = true