[package]
name = "native"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "native"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
# libmpv = {version = "2.0.0", features = ["protocols"] }

[dependencies.rodio]
git = "https://github.com/YXL76/rodio"
branch = "dev"
default-features = false
features = ["flac", "mp3"]

[dependencies.miniaudio]
version = "0.10.0"
default-features = false
features = ["ma-no-wav"]

[dependencies.curl]
version = "0.4.31"
default-features = false
features = []

[target.'cfg(target_os = "linux")'.dependencies.x11]
version = "2.18.2"
default-features = false
features = ["xlib"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"

[profile.release]
lto = true