[package]
name = "cloudmusic-native"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
build = "build.rs"
edition = "2021"

[lib]
name = "native"
crate-type = ["cdylib"]

[dependencies.neon]
git = "https://github.com/neon-bindings/neon"
branch = "main"
default-features = false
features = ["napi-6"]

[dependencies.rodio]
git = "https://github.com/RustAudio/rodio"
branch = "master"
default-features = false
features = ["symphonia-flac", "symphonia-mp3", "symphonia-wav"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
souvlaki = "0.5"

[target.'cfg(all(target_os = "windows", any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
raw-window-handle = "0.4"
winit = "0.26"

# [dependencies.curl]
# version = "0.4"
# default-features = false
# features = ["static-curl"]

# [target.'cfg(target_os = "linux")'.dependencies.x11]
# version = "2.18"
# default-features = false
# features = ["xlib"]

# [target.'cfg(target_os = "windows")'.dependencies.winapi]
# version = "0.3"
# default-features = false
# features = ["winuser"]
