[package]
name = "cloudmusic-native"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
build = "build.rs"
edition = "2021"

[lib]
name = "native"
crate-type = ["cdylib"]

[dependencies.neon]
git = "https://github.com/neon-bindings/neon"
branch = "main"
default-features = false
features = ["napi-7"]

[dependencies.rodio]
git = "https://github.com/RustAudio/rodio"
branch = "master"
default-features = false
features = ["symphonia-flac", "symphonia-mp3", "symphonia-wav"]

[target.'cfg(not(target_os = "macos"))'.dependencies]
souvlaki = "0.7.3"

[target.'cfg(all(target_os = "windows", any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
raw-window-handle = "0.6.2"
winit = "0.30.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56.0"
features = ["Win32_Foundation", "Win32_System_Threading"]

# [dependencies.curl]
# version = "0.4"
# default-features = false
# features = ["static-curl"]

# [target.'cfg(target_os = "linux")'.dependencies.x11]
# version = "2.18"
# default-features = false
# features = ["xlib"]

# [target.'cfg(target_os = "windows")'.dependencies.winapi]
# version = "0.3"
# default-features = false
# features = ["winuser"]
