[package]
name = "cloudmusic-wasm"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
edition = "2018"

[lib]
crate-type = ['cdylib']

[features]
debug = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.rodio]
git = "https://github.com/RustAudio/rodio"
branch = "master"
default-features = false
features = ["flac", "symphonia-mp3", "wasm-bindgen", "wav"]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["nightly"]
