[package]
name = "cloudmusic-wasm"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

# [features]
# debug = ["console_error_panic_hook"]

# [dependencies]
# console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.rodio]
git = "https://github.com/YXL76/rodio"
branch = "patch-cpal"
default-features = false
features = ["symphonia-flac", "symphonia-mp3", "symphonia-wav"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Performance"]
